# itw-dummy-note-app

./: compose.yaml
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  db-deployment.yaml  db-service.yaml  pvc.yaml  secret.yaml  web-deployment.yaml  web-service.yaml
note-app/: .dockerignore  Dockerfile  pyproject.toml
note-app/app/: db.py  main.py  routes.py
note-web/: Dockerfile  app.js  index.html  style.css
