[project]
name = "note-app"
version = "0.1.0"
description = "A note-taking API built with Litestar and PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
